    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

3.8.1 to 3.9: (XXXXX xxx, 2013)

  * Greatly extended functionality of the debugger disassembly:
      - The debugger now generates DASM-compatible disassembled code,
        which can be saved to an external file.  This disassembly is
        based on both a static and runtime analysis, and is extremely
        accurate.  It also automatically differentiates between
        CODE/PGFX/GFX/DATA/ROW areas, whereas normal Distella
        only differentiates between CODE/GFX/ROW.  For now, only
        single-bank (4K and smaller) ROMs are supported.

      - The disassembly now recognizes various TIA read/write mirrors,
        and marks them as such (for example, INPT4.30 instead of INPT4
        for address $3C).

      - ROMS less than 2K in size (so called 'Sub2K' ROMs) now show only
        the actual data in the binary.  This means, for example, that a
        256 byte ROM will show only 256 bytes in the disassembly, instead
        of padding garbage/duplicated data to 2K boundary.

      - Fixed labelling in ROW directives; it wasn't accurately setting
        a label in the case where it occurred in the middle of the data.

  * Fixed redundant "New console created" message when entering the same
    ROM multiple times from the ROM launcher.

  * Updated profile database for "BasketBall" ROMs; the joysticks are now
    swapped by default, which allows one and two-player games to work
    correctly.

  * Changed colour of the 'current PC indicator' in the debugger to
    match the one used for line selection.  This makes it easier to
    see for those with problems seeing lighter colours.

  * Updated included PNG library to latest stable version.

-Have fun!

